Expand Android syllabus into advanced study chapters